# Pandora_SDK

./: .gitmodules  CMakeLists.txt  README.md
include/pandora/: pandora.h
src/: pandora.cc  pandora_camera.cc  pandora_camera.h  pandora_client.c  tcp_command_client.c
test/: test.cc
